# mcshader-lsp

./: .codeclimate.yml  .drone.jsonnet  .drone.yml  .eslintrc  .gitignore  .rustfmt.toml  .vscodeignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  WORKSPACE  package-lock.json  package.json  setup.py  shaders.py  tsconfig.json  tslint.json
.github/workflows/: extension.yml  lsif.yml  release.yml  server.yml
client/: package-lock.json  package.json  rollup.config.js  tsconfig.json  tslint.json
client/server/: package-lock.json  package.json  server.js  server.js.map
client/src/: commands.ts  config.ts  extension.ts  glslangValidator.ts  log.ts  lspClient.ts  lspExt.ts  net.ts  persistent_state.ts
server/: .gitignore  BUILD  Cargo.toml  Makefile  package-lock.json  package.json  tsconfig.json  tslint.json
server/cargo/: BUILD  Cargo.toml  crates.bzl
server/cargo/remote/: aho-corasick-0.7.13.BUILD  anyhow-1.0.32.BUILD  autocfg-1.0.0.BUILD  autocfg-1.0.1.BUILD  base64-0.12.3.BUILD  bit-set-0.5.2.BUILD  bit-vec-0.6.2.BUILD  bitflags-1.2.1.BUILD  cfg-if-0.1.10.BUILD  chan-0.1.23.BUILD  fixedbitset-0.2.0.BUILD  fs_extra-1.2.0.BUILD  fuchsia-cprng-0.1.1.BUILD  futures-0.1.29.BUILD  hamcrest2-0.3.0.BUILD  hashbrown-0.9.0.BUILD  idna-0.2.0.BUILD  indexmap-1.0.2.BUILD  indexmap-1.4.0.BUILD  indexmap-1.6.0.BUILD  itoa-0.4.6.BUILD  lazy_static-1.4.0.BUILD  libc-0.2.72.BUILD  libc-0.2.77.BUILD  log-0.3.9.BUILD  log-0.4.11.BUILD  log-0.4.8.BUILD  lsp-types-0.77.0.BUILD  lsp-types-0.80.0.BUILD  matches-0.1.8.BUILD  memchr-2.3.3.BUILD  num-0.2.1.BUILD  num-bigint-0.2.6.BUILD  num-complex-0.2.4.BUILD  num-integer-0.1.43.BUILD  num-iter-0.1.41.BUILD  num-rational-0.2.4.BUILD  num-traits-0.2.12.BUILD  percent-encoding-2.1.0.BUILD  petgraph-0.5.1.BUILD  (+39 more)
server/filesystem/: Cargo.toml
server/filesystem/src/: lib.rs  source_norm.rs  top_levels.rs  url_norm.rs
server/graph/: Cargo.toml
server/graph/src/: dfs.rs  graph.rs  lib.rs
server/include_merger/: Cargo.toml
server/include_merger/src/: consts.rs  lib.rs  merge_views.rs
server/logging/: Cargo.toml
server/logging/src/: lib.rs
server/logging_macro/: Cargo.toml
server/logging_macro/src/: lib.rs
server/main/: Cargo.toml
server/main/src/: configuration.rs  dfs.rs  diagnostics_parser.rs  graph.rs  linemap.rs  main.rs  merge_views.rs  navigation.rs  opengl.rs  source_mapper.rs  test.rs
server/main/src/commands/: merged_includes.rs
server/main/testdata/01/: final.fsh.merge
server/main/testdata/02/: final.fsh.merge
server/main/testdata/03/: final.fsh.merge
server/main/testdata/04/: final.fsh  final.fsh.merge
server/main/testdata/04/utils/: stuff2.glsl
server/main/testdata/06/: final.fsh.merge  test.glsl
server/opengl/: Cargo.toml
server/opengl/src/: diagnostics_parser.rs  lib.rs  opengl_context.rs  opengl_context_facade.rs
server/server/: Cargo.toml
server/server/src/: lib.rs  server.rs  workspace.rs
server/server/src/commands/: graph_dot.rs  merged_includes.rs  mod.rs  parse_tree.rs
server/sourcefile/: Cargo.toml
server/sourcefile/src/: lib.rs  linemap.rs  source_file.rs  source_mapper.rs
server/src/: commands.rs  comment.ts  completionProvider.ts  config.ts  consts.rs  dfs.rs  diagnostics_parser.rs  fileTypes.ts  global.ts  glslangValidator.ts  graph.rs  graph.ts  linksProvider.ts  linter.ts  linter.ts.old  logging.rs  logging.ts  lsp_ext.rs  main.rs  merge_views.rs  navigation.rs  opengl.rs  provider.rs  server.ts  test.rs  uri.ts  url_norm.rs  utils.ts
server/src/commands/: graph_dot.rs  merged_includes.rs  mod.rs  parse_tree.rs
server/testdata/01/: common.glsl  final.fsh  final.fsh.merge
server/testdata/02/: final.fsh  final.fsh.merge
server/testdata/02/utils/: burger.glsl  sample.glsl
server/testdata/03/: final.fsh.merge
server/testdata/03/utils/: sample.glsl  test.glsl
server/testdata/04/: final.fsh  final.fsh.merge
server/testdata/04/lib/: matrices.glsl
server/testdata/04/utils/: stuff1.glsl  utilities.glsl
server/testdata/05/: final.fsh  final.fsh.merge
server/testdata/05/test/: banana.glsl  burger.glsl
server/testdata/06/: final.fsh  final.fsh.merge
server/workspace/: Cargo.toml
server/workspace/src/: lib.rs  tree.rs  workspace.rs  workspace_manager.rs
server/workspace_tree/: Cargo.toml
server/workspace_tree/src/: lib.rs  tree.rs
src/: asyncSpawn.ts  config.ts  extension.ts  fileDescriptors.ts  global.ts
src/linter/: glslProvider.ts  includeManager.ts
src/test/: extension.test.ts
test/: extension.test.ts
