[package]
name = "vscode-mc-shader"
version = "0.1.0"
authors = ["Noah Santschi-Cooney <noah@santschi-cooney.ch>"]
edition = "2018"

[dependencies]
rust_lsp = { git = "https://github.com/Strum355/RustLSP", branch = "master" }
serde_json = "1.0.56"
serde = "1.0.114"
walkdir = "2.3.1"
petgraph = "0.5.1"
lazy_static = "1.4.0"
regex = "1.3.9"
chan = "0.1.23"
url = "2.1.1"
percent-encoding = "2.1.0"
anyhow = "1.0.31"
bit-set = "0.5.2"
thiserror = "1.0.20"

[dev-dependencies]
tempdir = "0.3.7"
fs_extra = "1.1.0"
hamcrest2 = "*"
