[package]
name = "mcshader-lsp"
version = "0.9.5"
authors = ["Noah Santschi-Cooney <noah@santschi-cooney.ch>"]
edition = "2018"

[dependencies]
rust_lsp = { git = "https://github.com/Strum355/RustLSP", branch = "master" }
serde_json = "1.0.61"
serde = "1.0.123"
walkdir = "2.3.1"
petgraph = "0.5.1"
lazy_static = "1.4.0"
regex = "1.4.3"
chan = "0.1.23"
url = "2.2.0"
percent-encoding = "2.1.0"
anyhow = "1.0.38"
bit-set = "0.5.2"
thiserror = "1.0.23"
glutin = "0.26.0"
gl = "0.14.0"
ctor = "0.1.18"
mockall = "0.9.0"
path-slash = "0.1.4"

[dev-dependencies]
tempdir = "0.3.7"
fs_extra = "1.2.0"
hamcrest2 = "*"
pretty_assertions = "0.6.1"