[package]
name = "mcshader-lsp"
version = "0.9.5"
authors = ["Noah Santschi-Cooney <noah@santschi-cooney.ch>"]
edition = "2021"

[dependencies]
rust_lsp = { git = "https://github.com/Strum355/RustLSP", branch = "master" }
serde_json = "1.0"
serde = "1.0"
walkdir = "2.3"
petgraph = "0.6"
lazy_static = "1.4"
regex = "1.4"
chan = "0.1"
url = "2.2"
percent-encoding = "2.1"
anyhow = "1.0"
bit-set = "0.5"
thiserror = "1.0"
glutin = "0.28"
gl = "0.14"
ctor = "0.1"
mockall = "0.11"
path-slash = "0.1"

[dev-dependencies]
tempdir = "0.3"
fs_extra = "1.2"
hamcrest2 = "*"
pretty_assertions = "1.1"