[package]
name = "logging"
version = "0.9.8"
authors = ["Noah Santschi-Cooney <noah@santschi-cooney.ch>"]
edition = "2021"

[lib]
doctest = false

[dependencies]
slog = { version = "2.7", features = [ "max_level_trace", "release_max_level_trace" ] }
slog-term = "2.9"
slog-scope = "4.4"
slog-atomic = "3.1"
slog-async = "2.7.0"
slog-stdlog = "4.1.1"
slog-scope-futures = "0.1.1"
log = "0.4.16"
rand = "0.8"
lazy_static = "1.4"
tokio = { version = "1.18.0", features = ["full"] }
logging_macro = { path = "../logging_macro" }