[package]
name = "mcshader-lsp"
version = "0.9.5"
authors = ["Noah Santschi-Cooney <noah@santschi-cooney.ch>"]
edition = "2021"

[dependencies]
rust_lsp = { git = "https://github.com/Strum355/RustLSP", branch = "master" }
serde_json = "1.0"
serde = "1.0"
walkdir = "2.3"
petgraph = "0.6"
lazy_static = "1.4"
regex = "1.4"
url = "2.2"
percent-encoding = "2.1"
anyhow = "1.0"
thiserror = "1.0"
glutin = "0.28"
gl = "0.14"
mockall = "0.11"
path-slash = "0.1"
slog = { version = "2.7", features = [ "max_level_trace", "release_max_level_trace" ] }
slog-scope = "4.4"
once_cell = "1.7"
tree-sitter = "0.20.6"
tree-sitter-glsl = "0.1.2"
logging = { path = "../logging" }
logging_macro = { path = "../logging_macro" }

[dev-dependencies]
tempdir = "0.3"
fs_extra = "1.2"
hamcrest2 = "*"
pretty_assertions = "1.1"