[package]
name = "mcshader-lsp"
version = "0.9.8"
authors = ["Noah Santschi-Cooney <noah@santschi-cooney.ch>"]
edition = "2021"

[dependencies]
serde_json = "1.0"
serde = "1.0"

walkdir = "2.3"
graph = { path = "../graph" }
lazy_static = "1.4"
regex = "1.4"
url = "2.2"
mockall = "0.11"
path-slash = "0.2"
glob = "0.3"
filesystem = { path = "../filesystem" }

# glutin = "0.28"
gl = "0.14"

anyhow = "1.0"
thiserror = "1.0"

tree-sitter = "0.20"
tree-sitter-glsl = "0.1"
logging = { path = "../logging" }
logging_macro = { path = "../logging_macro" }

server = { path = "../server" }
tower-lsp = "0.17"
tokio = { version = "1.18", features = ["full"] }
futures = "0.3"

opengl = { path = "../opengl" }
sourcefile = { path = "../sourcefile" }

[dev-dependencies]
tempdir = "0.3"
fs_extra = "1.2"
hamcrest2 = "*"
pretty_assertions = "1.1"
tower-test = "0.4"