[package]
name = "sourcefile"
version = "0.9.8"
authors = ["Noah Santschi-Cooney <noah@santschi-cooney.ch>"]
edition = "2021"

[lib]
doctest = false

[dependencies]
anyhow = "1.0"

tower-lsp = "0.17.0"
tokio = { version = "1.18", features = ["fs"]}

logging = { path = "../logging" }
filesystem = { path = "../filesystem" }

tree-sitter = "0.20.6"
tree-sitter-glsl = "0.1.2"

[dev-dependencies]
trim-margin = "0.1"